fix udated split json from config.ng.jobs.json

--- a/tools/json/config.help.json
+++ b/tools/json/config.help.json
@@ -2,7 +2,7 @@
     "menu": [
         {
             "id": "Help",
-            "description": "About this app",
+            "description": "About this tool",
             "sub": [
                 {
                     "id": "H02",
