--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -14,7 +14,7 @@
                             "sub": [
                                 {
                                     "id": "DE01",
-                                    "prompt": "Install XFCE:\nXfce is a lightweight desktop environment for UNIX-like operating systems. It aims to be fast and low on system resources, while still being visually appealing and user friendly.",
+                                    "about": "Install XFCE:\nXfce is a lightweight desktop environment for UNIX-like operating systems. It aims to be fast and low on system resources, while still being visually appealing and user friendly.",
                                     "description": "XFCE desktop Install",
                                     "command": [
                                         "manage_desktops 'xfce' 'install'"
@@ -421,7 +421,7 @@
                         {
                             "id": "SW25",
                             "description": "Install Docker Minimal",
-                            "prompt": "This operation will install Docker Minimal.\nWould you like to continue?",
+                            "about": "This operation will install Docker Minimal.",
                             "command": [
                                 "install_docker"
                             ],
@@ -434,7 +434,7 @@
                         {
                             "id": "SW26",
                             "description": "Install Docker Engine",
-                            "prompt": "This operation will install Docker Engine.\nWould you like to continue?",
+                            "about": "This operation will install Docker Engine.",
                             "command": [
                                 "install_docker engine"
                             ],
@@ -447,7 +447,7 @@
                         {
                             "id": "SW27",
                             "description": "Remove Docker",
-                            "prompt": "This operation will purge Docker.\nWould you like to continue?",
+                            "about": "This operation will purge Docker.",
                             "command": [
                                 "apt_install_wrapper apt -y purge docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin docker-ce-rootless-extras"
                             ],
@@ -460,7 +460,7 @@
                         {
                             "id": "SW28",
                             "description": "Purge all Docker images, containers, and volumes",
-                            "prompt": "This operation will delete all Docker images, containers, and volumes.\nWould you like to continue?",
+                            "about": "This operation will delete all Docker images, containers, and volumes.",
                             "command": [
                                 "rm -rf /var/lib/docker",
                                 "rm -rf /var/lib/containerd"
@@ -480,7 +480,7 @@
                         {
                             "id": "SW21",
                             "description": "Install Plex Media server",
-                            "prompt": "This operation will install Plex Media server.\nWould you like to continue?",
+                            "about": "This operation will install Plex Media server.",
                             "command": [
                                 "install_plexmediaserver"
                             ],
@@ -493,7 +493,7 @@
                         {
                             "id": "SW22",
                             "description": "Remove Plex Media server",
-                            "prompt": "This operation will purge Plex Media server.\nWould you like to continue?",
+                            "about": "This operation will purge Plex Media server.",
                             "command": [
                                 "apt_install_wrapper apt-get -y purge plexmediaserver",
                                 "sed -i '/plexmediaserver.gpg/s/^/#/g' /etc/apt/sources.list.d/plexmediaserver.list"
@@ -507,7 +507,7 @@
                         {
                             "id": "SW23",
                             "description": "Install Emby server",
-                            "prompt": "This operation will install Emby server.\nWould you like to continue?",
+                            "about": "This operation will install Emby server.",
                             "command": [
                                 "install_embyserver"
                             ],
@@ -520,7 +520,7 @@
                         {
                             "id": "SW24",
                             "description": "Remove Emby server",
-                            "prompt": "This operation will purge Emby server.\nWould you like to continue?",
+                            "about": "This operation will purge Emby server.",
                             "command": [
                                 "apt_install_wrapper apt -y purge emby-server"
                             ],
@@ -539,7 +539,7 @@
                         {
                             "id": "M00",
                             "description": "Install Cockpit web-based management tool",
-                            "prompt": "This operation will install Cockpit.\ncockpit cockpit-ws cockpit-system cockpit-storaged\nWould you like to continue?",
+                            "about": "This operation will install Cockpit.\ncockpit cockpit-ws cockpit-system cockpit-storaged",
                             "command": [
                                 "see_current_apt update",
                                 "apt_install_wrapper apt -y install cockpit cockpit-ws cockpit-system cockpit-storaged "
@@ -553,7 +553,7 @@
                         {
                             "id": "M01",
                             "description": "Purge Cockpit web-based management tool",
-                            "prompt": "This operation will purge Cockpit.\nWould you like to continue?",
+                            "about": "This operation will purge Cockpit.",
                             "command": [
                                 "apt_install_wrapper apt -y purge cockpit"
                             ],
