--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -468,8 +468,30 @@
                             "status": "Preview",
                             "doc_link": "",
                             "src_reference": "",
-                            "author": "",
+                            "author": "@igorpecovnik",
                             "condition": "! check_if_installed docker-ce && [ -d /var/lib/docker ]"
+                        },
+                        {
+                            "id": "SP27",
+                            "description": "Install Portainer",
+                            "prompt": "This operation will install Portainer.\nWould you like to continue?",
+                            "command": ["module_portainer install"],
+                            "status": "Stable",
+                            "doc_link": "",
+                            "src_reference": "",
+                            "author": "",
+                            "condition": "! module_portainer status"
+                        },
+                        {
+                            "id": "SP28",
+                            "description": "Remove Portainer",
+                            "prompt": "This operation will delete Portainer container.\nWould you like to continue?",
+                            "command": ["module_portainer uninstall"],
+                            "status": "Stable",
+                            "doc_link": "",
+                            "src_reference": "",
+                            "author": "@igorpecovnik",
+                            "condition": "module_portainer status"
                         }
                     ]
                 },
